# deep-research-agent

./: .gitignore  README.md
.cursor/: mcp.json
backend/: README.md  agent.ipynb  agent.py  main.py  pyproject.toml  web_search.ipynb
backend/documentation/: mirascope.txt
backend/src/: agent.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: ChatInterface.tsx  DocumentViewer.tsx  Landing.tsx
frontend/src/components/: ProgressDisplay.tsx  ResultsDisplay.tsx  SearchForm.tsx
