[project]
name = "deep-research-backend"
version = "0.1.0"
description = "Deep Research Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "google-genai>=1.2.0",
    "ipykernel>=6.29.5",
    "lilypad-sdk[google]>=0.9.0",
    "marimo>=0.13.15",
    "markdownify>=1.1.0",
    "mirascope[anthropic,google,openai]>=1.25.0",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "uvicorn>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
